@@ -19,6 +19,7 @@
 	Wrote method.
 	(PokerRendererTests.test18_scheduleLookCardsNoGameRunning): Wrote
 	method.
+	(PokerRendererTests.test19_clickSitOutCoverage): Wrote method.
 
 	* pokerui/pokerrenderer.py (PokerRenderer._handleConnection):
 	error message for bad outfit should print outfits, not urls.
